# Self-Healing-Cloud-Infrastructure-Agent

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
iac/terraform/environments/production/: main.tf
iac/terraform/modules/service/: main.tf  outputs.tf  variables.tf
libs/shcia-contracts/: pyproject.toml
libs/shcia-contracts/shcia_contracts/: schemas.py
libs/shcia-core/: pyproject.toml
libs/shcia-core/shcia_core/: base_agent.py
ops/runbooks/: remediation_rollback.md
ops/workflows/langgraph/: orchestrator.py
services/chaos/src/: main.py
services/cost-guardian/src/: main.py
services/diagnosis/src/: main.py
services/execution/src/: main.py
services/observer/src/: main.py
services/planner/src/: main.py
